--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         applicationId "com.cwuom.iseen"
         minSdk 29
         targetSdk 34
-        versionCode 5
+        versionCode 6
         versionName "β"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -36,8 +36,13 @@ android {
     buildToolsVersion '34.0.0'
 }
 
+configurations.configureEach {
+    exclude group: 'androidx.appcompat', module: 'appcompat'
+}
+
 dependencies {
     implementation 'androidx.activity:activity:1.8.2'
+    implementation 'androidx.preference:preference:1.2.1'
     constraints {
         add("implementation", "org.jetbrains.kotlin:kotlin-stdlib-jdk7") {
             version {
@@ -50,7 +55,7 @@ dependencies {
             }
         }
     }
-    
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -69,13 +74,12 @@ dependencies {
     implementation "com.kongzue.dialogx.style:DialogXIOSStyle:${dialogx_version}"
 
     // material you
-    implementation 'com.google.android.material:material:1.12.0-beta01'
+    implementation 'com.google.android.material:material:1.12.0-rc01'
 
     // okhttp3
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
 
     // refresh
-    implementation 'androidx.appcompat:appcompat:1.6.1'                 //必须 1.0.0 以上
     implementation  'io.github.scwang90:refresh-layout-kernel:2.1.0'      //核心必须依赖
     implementation  'io.github.scwang90:refresh-header-classics:2.1.0'    //经典刷新头
 
@@ -84,4 +88,9 @@ dependencies {
 
     // 富文本渲染
     implementation "io.noties.markwon:core:4.6.2"
+
+    // Material Preference
+    implementation "dev.rikka.rikkax.material:material-preference:2.0.0"
+    implementation 'dev.rikka.rikkax.appcompat:appcompat:1.6.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
 }
