--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,16 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/iseen"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Iseen"
+        android:theme="@style/Base.Theme.Iseen"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".QzoneActivity"
+            android:name=".SettingsActivity"
             android:exported="false"
-            />
+            android:label="@string/title_activity_settings" />
+        <activity
+            android:name=".QzoneActivity"
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
@@ -29,6 +32,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
