--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 29
         targetSdk 34
         versionCode 6
-        versionName "β"
+        versionName "RELEASE-6.0.2.20240414"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
