improve: refresh logic to update user group information during refresh.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 29
         targetSdk 34
         versionCode 6
-        versionName "RELEASE-6.0.4.20240414"
+        versionName "RELEASE-6.0.4.20240414.7073e30"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
